# FlightToHFT

./: .gitignore  CMakeLists.txt  Diagramme sans nom.drawio  README.md
assets/popup_pack_sfml/: popup_avec_son.cpp
include/: ChoiceColor.hpp  Coin2.hpp  Direction.hpp  EntityType.hpp  GameLevel.hpp  HeightUp.hpp  Order.hpp  TypeMoving.hpp  Utilities.hpp  test.hpp
src/: main.cpp  main_copy.cpp
src/Background/: Background.cpp  Background.hpp
src/BackgroundManager/: BackgroundManager.cpp  BackgroundManager.hpp
src/Board/: Board.cpp  Board.hpp
src/BoardManager/: BoardManager.cpp  BoardManager.hpp
src/BoundaryChecker/: BoundaryChecker.cpp  BoundaryChecker.hpp
src/ChoiceSelection/: choiceSelection.cpp  choiceSelection.hpp
src/Coin/: Coin.cpp  Coin.hpp
src/Collisions/: Collisions.cpp  Collisions.hpp
src/CollisionsManager/: CollisionsManager.cpp  CollisionsManager.hpp
src/Core/: Core.cpp  Core.hpp
src/Down/: Down.cpp  Down.hpp
src/FinalScene/: FinalScene.cpp  FinalScene.hpp
src/GameScene/: GameScene.cpp  GameScene.hpp
src/GameScene/Menu/: Menu.cpp  Menu.hpp
src/GameSceneManager/: GameSceneManager.cpp  GameSceneManager.hpp
src/HorizontalMove/: HorizontalMove.cpp  HorizontalMove.hpp
src/KeyboardEvents/: KeyboardEvents.cpp  KeyboardEvents.hpp  KeyboardEvents.tpp
src/MovementSystem/: MovementSystem.cpp  MovementSystem.hpp
src/MovingDirection/: MovingDirection.hpp
src/MovingDirection/Down/: Down.cpp  Down.hpp
src/MovingDirection/Left/: Left.cpp  Left.hpp
src/MovingDirection/Right/: Right.cpp  Right.hpp
src/MovingDirection/Up/: Up.cpp  Up.hpp
src/PlayerSprite/: PlayerSprite.cpp  PlayerSprite.hpp
src/PopManager/: PopManager.cpp  PopManager.hpp
src/PopUp/: PopUp.cpp  PopUp.hpp
src/PopupManagerLayer/: PopupManagerLayer.cpp  PopupManagerLayer.hpp
src/Scene/: Scene.cpp  Scene.hpp
src/Scene/GameScene/: GameScene.cpp  GameScene.hpp
src/Scene/GameScene/Level1/: Level1.cpp  Level1.hpp
src/Scene/Menu/: Menu.cpp  Menu.hpp
src/Score/: Score.cpp  Score.hpp
src/Up/: Up.cpp  Up.hpp
src/Upmoving_/: Upmoving.cpp  Upmoving.hpp
src/Wall/: Wall.cpp  Wall.hpp
src/WallManager/: WallManager.cpp  WallManager.hpp
